syntax = "proto3";
package bff;

option go_package = "bff/;bffpb";

//组队开始进入匹配 通知客户端组队进入匹配中
message NtfMatchingGroupStart {
  int32 play_id = 1; //玩法id
}

//匹配--个人
message C2SMatchingSingleStart {
  int32 playMap = 1; //玩法id
}

message S2CMatchingSingleStart {
  int32 playMap = 1; //玩法id
}

//取消匹配
message C2SMatchingCancel {}

message S2CMatchingCancel {}

//查询匹配状态
message C2SMatchingStatus{

}

message S2CMatchingStatus{
  int32 play_id = 1; //玩法id
  int32 status = 2;//状态 0=空闲 1=准备状态 2=匹配状态
}